--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,4 +21,5 @@ jobs:
         # The name of the output variable.
         output_name: result
         replace_str: \n
+        replace_with_str: ' '
     - run: echo $result
