--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: strings-action
+    - id: string
+      name: strings-action
       uses: hottestchilipepper/github-strings-action@v0.0.2
       with:
         # Value that the substring will be obtained from.
@@ -22,4 +23,4 @@ jobs:
         output_name: result
         replace_str: \n
         replace_with_str: ' '
-    - run: echo $result
+    - run: echo ${{ steps.string.outputs.result }}
